--- a/pages/introduction/introduction.wxml
+++ b/pages/introduction/introduction.wxml
@@ -189,7 +189,7 @@
     <image class="mask_close" bindtap="closeMask" src="/images/delete/delete.png"></image>
     <view class='toat_mainCode'>
       <text>微信号： pymt1818</text>
-      <image src="/images/home/wx.png"></image>
+      <image src="/images/home/wx.png"  lazy-load="{{true}}" show-menu-by-longpress="{{true}}"></image>
       <text>电话： 03932277520</text>
     </view>
   </view>
