--- a/pages/message/list/list.wxml
+++ b/pages/message/list/list.wxml
@@ -50,7 +50,7 @@
     <image class="mask_close" bindtap="closeMask" src="/images/delete/delete.png"  lazy-load="{{true}}"></image>
     <view class='toat_mainCode'>
       <text>微信号： pymt1818</text>
-      <image src="/images/home/wx.png"  lazy-load="{{true}}"></image>
+      <image src="/images/home/wx.png"   lazy-load="{{true}}" show-menu-by-longpress="{{true}}"></image>
       <text>电话： 03932277520</text>
     </view>
   </view>
