--- a/pages/myself/setting/setting.wxss
+++ b/pages/myself/setting/setting.wxss
@@ -59,6 +59,11 @@
   font-size:28rpx;
   color: RGBA(153, 153, 153, 1);
 }
+textarea{
+  width: 100%;
+  padding:10rpx;
+  border: 1px solid rgba(196,171,91,1);
+}
 .toat_main{
   width: 100%;
   height: 220rpx;
@@ -83,4 +88,44 @@
 .toat_no{
   color: RGBA(174, 156, 128, 1);
   background: RGBA(255, 255, 255, 1);
+}
+
+
+
+.maskCode_centerCode{
+  position: relative;
+  width: 686rpx;
+  height: 678rpx;
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:60rpx 40rpx 40rpx 40rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.maskCode_mainCode{
+    width: 100%;
+  height: 400rpx;
+  font-size:28rpx;
+  color: RGBA(153, 153, 153, 1);
+  text-align: center;
+}
+.maskCode_mainCode text{
+  display: block;
+  margin: 0 auto;
+}
+.maskCode_mainCode image{
+  width: 282rpx;
+  height: 282rpx;
+  display: block;
+  margin: 100rpx auto 0;
+}
+.mask_close{
+  position: absolute;
+  width: 48rpx;
+  height: 48rpx;
+  right: -24rpx;
+  top: -24rpx;
+  z-index: 99;
 }
