--- a/pages/single/user_single/user_single.wxss
+++ b/pages/single/user_single/user_single.wxss
@@ -157,8 +157,10 @@
   margin-top: 20rpx;
 }
 
-.single-img{
+.single_img_box{
   margin-top: 20rpx;
+}
+.single-img{
   display: inline-block;
   margin-right: 10rpx;
 }
