--- a/pages/single/index.wxss
+++ b/pages/single/index.wxss
@@ -198,8 +198,10 @@
   margin-top: 20rpx;
 }
 
-.single-img{
+.single_img_box{
   margin-top: 20rpx;
+}
+.single-img{
   display: inline-block;
   margin-right: 10rpx;
 }
