--- a/pages/single/my_single/my_single.wxss
+++ b/pages/single/my_single/my_single.wxss
@@ -168,8 +168,10 @@
   margin-top: 20rpx;
 }
 
-.single-img{
+.single_img_box{
   margin-top: 20rpx;
+}
+.single-img{
   display: inline-block;
   margin-right: 10rpx;
 }
